# moviedb

./: .gitattributes  .gitignore  README.md  build  clean  compose.yaml
backend/: .flaskenv  .gitignore  __init__.py  app.py  coveragehtml  example.py  pyproject.toml  requirements.txt  run.py  rundev  runtest
backend/api/: __init__.py
backend/api/blueprints/: __init__.py
backend/api/blueprints/movies/: __init__.py  routes.py
backend/logger/: __init__.py  logger.py
backend/migrations/: env.py
backend/migrations/versions/: 004be7a28e03_.py  724cbd5858de_.py  9e8b23bb53d7_added_relation_between_users_and_roles.py  e4c29ed5266e_users_table.py
backend/src/: run.py
backend/src/api/: __init__.py  config.py  models.py  variables.py
backend/src/api/account/: __init__.py  functions.py  routes.py  schemas.py
backend/src/api/auth/: __init__.py  functions.py  routes.py  schemas.py
backend/src/api/blueprints/: __init__.py
backend/src/api/blueprints/movies/: __init__.py  routes.py
backend/src/api/models/: __init__.py  permission.py  role.py  user.py  user_role.py
backend/src/api/movies/: __init__.py  routes.py  schemas.py
backend/src/logger/: __init__.py  logger.py
backend/tests/: conftest.py  data.sql  helpers.py  test_db.py  test_factory.py  test_run.py
backend/tests/test_api/test_account/: test_account_routes.py
backend/tests/test_api/test_auth/: test_auth_functions.py  test_auth_routes.py
backend/tests/test_api/test_models/: test_user.py
backend/tests/test_api/test_movies/: test_movies_routes.py
frontend/: eslint.config.mjs  next.config.ts  (+3 more)
(+75 files in other folders)
