[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend API for moviedb project"
authors = ["Haelnorr <lockedonohoe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-smorest = "^0.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
